[package]
name = "tachyonix"
# When incrementing version and releasing to crates.io:
# - Update crate version in README.md
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
version = "0.2.0"
authors = ["Serge Barral <serge.barral@asynchronics.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/tachyonix"
readme = "README.md"
description = """
A very fast asynchronous, multi-producer, single-consumer bounded channel.
"""
categories = ["asynchronous", "concurrency"]
keywords = ["async", "channel", "futures", "mpsc"]
autotests = false

[dependencies]
async-event = "0.1"
crossbeam-utils = "0.8"
diatomic-waker = "0.1"
futures-core = "0.3"

[target.'cfg(tachyonix_loom)'.dependencies]
loom = "0.5"

[dev-dependencies]
futures-executor = { version = "0.3", default-features = false, features = ["thread-pool"] }
futures-task = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[target.'cfg(tachyonix_loom)'.dev-dependencies]
waker-fn = "1.1"

[[test]]
name = "integration"
path = "tests/tests.rs"
