[package]
name = "tachyonix"
# When incrementing version and releasing to crates.io:
# - Update crate version in README.md
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
version = "0.3.1"
authors = ["Serge Barral <serge.barral@asynchronics.com>"]
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/tachyonix"
readme = "README.md"
description = """
A very fast asynchronous, multi-producer, single-consumer bounded channel.
"""
categories = ["asynchronous", "concurrency"]
keywords = ["async", "channel", "futures", "mpsc"]
autotests = false

[dependencies]
async-event = "0.2"
crossbeam-utils = "0.8"
diatomic-waker = "0.2"
futures-core = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
futures-executor = { version = "0.3", default-features = false, features = ["thread-pool"] }
futures-task = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-time = "3.0"

[target.'cfg(tachyonix_loom)'.dev-dependencies]
loom = "0.7"
waker-fn = "1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tachyonix_loom)', 'cfg(tachyonix_ignore_leaks)'] }

[[test]]
name = "integration"
path = "tests/tests.rs"
